fix: number spacing

--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ body {
 
 #item-num {
   color: #747474;
+  letter-spacing: -26px;
 }
 
 #main {
